only god and I know what I have done so far and I cant add all this in single comment thats why writing it